--- a/service_discovery/src/main/resources/application-dev.yml
+++ b/service_discovery/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 ---
 spring:
   profiles:
-    active: server #指定使用哪个环境
+    active: dev #指定使用哪个环境
 server:
   port: 8761
 eureka:
@@ -17,7 +17,7 @@ eureka:
 ---
 server:
   profiles:
-    active: client #指定使用哪个环境
+    active: test #指定使用哪个环境
   port: 8080
 spring:
   application:
